updated searchbar animations

--- a/linkedtech/index.html
+++ b/linkedtech/index.html
@@ -19,7 +19,7 @@
             <a class="header__logo header-item">
                 <img src="svg/linkedintech-logo.svg" alt="">
             </a>
-            <div class="header__mid-section header-item">
+            <div class="header__mid-section header__mid-section_active header-item">
                 <div class="header__searchbar header__searchbar_inactive">
                     <img style="margin-right: 10px; width: 15px;" src="svg/search.svg" alt="">
                     <form action="" class="header__search-box">
